--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: CI
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 jobs:
   tests:
     runs-on: ubuntu-latest
+    env:
+      OPENAI_API_KEY: dummy
+      RAG_EMBEDDINGS: dummy
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -11,5 +14,3 @@ jobs:
       - run: python -m pip install --upgrade pip
       - run: pip install -r requirements.txt
       - run: python -m pytest -q
-        env:
-          OPENAI_API_KEY: dummy
